--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,8 @@
 # NOTE: while mentioning Google cloud storage paths, mention full path starting from 'gs://'
 train_params:
   batch_size: 128
-  num_epochs: 3
-  steps_per_epoch: 20
+  num_epochs: 10
+  steps_per_epoch: 11950
   data_dir: 'gs://text-analysis-323506/train_data/'
   output_dir: 'gs://text-analysis-323506/train_results/'
   use_multiprocessing: True
@@ -17,7 +17,9 @@ train_params:
 
     # Model checkpoint callback.
     ModelCheckpoint:
-      filepath: 'gs://text-analysis-323506/train_results/checkpoints/model.{epoch:02d}-{val_loss:.2f}.hdf5'
+      # Only mention the model name here, a folder called 'checkpoints' containing checkpoints will be created in 'output_dir' specified above in 
+      # 'train_params' 
+      filepath: 'model.{epoch:02d}-{val_loss:.2f}.hdf5'
       monitor: 'val_accuracy'
       save_freq: 'epoch'
       verbose: 1
@@ -33,7 +35,8 @@ train_params:
 
     # Csv logger callback.
     CSVLogger:
-      filename: 'gs://text-analysis-323506/train_results/train_logs.csv'
+      # Only mention csv file name here, This csb file will be dumped to  'output_dir' specified above in 'train_params' 
+      filename: 'train_logs.csv'
       separator: ','
       append: False
 
