--- a/config/config.yaml
+++ b/config/config.yaml
@@ -17,9 +17,7 @@ train_params:
 
     # Model checkpoint callback.
     ModelCheckpoint:
-      # Only mention the model name here, a folder called 'checkpoints' containing checkpoints will be created in 'output_dir' specified above in 
-      # 'train_params' 
-      filepath: 'model.{epoch:02d}-{val_loss:.2f}.hdf5'
+      filepath: 'gs://text-analysis-323506/train_results/checkpoints/model.{epoch:02d}-{val_loss:.2f}.hdf5'
       monitor: 'val_accuracy'
       save_freq: 'epoch'
       verbose: 1
