Updating model checkpoint configuration
Updating model checkpoint to save only weights instead of whole model.

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -23,6 +23,7 @@ train_params:
       verbose: 1
       period: 1
       save_best_only: False
+      save_weights_only: True
 
     # Early stopping callback.
     EarlyStopping:
