--- a/config/config.yaml
+++ b/config/config.yaml
@@ -42,10 +42,10 @@ train_params:
       append: False
 
 predict_params:
-  model_path: 'gs://text-analysis-323506/train_results/trained_model/2021_08_01-10:07:06/CNN_Amazon_Reviews_Analysis.hdf5'
-  data_path: 'gs://text-analysis-323506/test_images'
-  results_path: 'gs://text-analysis-323506/test_results/CNN_test_results.csv'
-  tokenizer_path: 'gs://text-analysis-323506/train_results_CNN/CNN_2021_09_25-11:20:36/parser_output/tokenizer.pickle'
+  model_path: 'gs://text-analysis-323506/train_results/CNN_2021_10_03-09:35:51/trained_model/CNN_Amazon_Reviews_Analysis.hdf5'
+  data_path: 'gs://text-analysis-323506/test_data/test_text_100.csv.gz'
+  result_path: 'gs://text-analysis-323506/test_results/CNN_test_results.csv'
+  tokenizer_path: 'gs://text-analysis-323506/train_results/CNN_2021_10_03-09:35:51/parser_output/tokenizer.pickle'
 
 model_params:
   # Three types of models are available. 'CNN', 'LSTM' and 'Hybrid'. Hybrid model is a mixture of Conv1D layers and
