--- a/config/config.yaml
+++ b/config/config.yaml
@@ -42,11 +42,6 @@ train_params:
       separator: ','
       append: False
 
-predict_params:
-  model_path: 'gs://text-analysis-323506/train_results/CNN_2021_10_03-09:35:51/trained_model/CNN_Amazon_Reviews_Analysis.hdf5'
-  data_path: 'gs://text-analysis-323506/test_data/test_text_100.csv.gz'
-  result_path: 'gs://text-analysis-323506/test_results/CNN_test_results.csv'
-  tokenizer_path: 'gs://text-analysis-323506/train_results/CNN_2021_10_03-09:35:51/parser_output/tokenizer.pickle'
 
 model_params:
   # Three types of models are available. 'CNN', 'LSTM' and 'Hybrid'. Hybrid model is a mixture of Conv1D layers and
@@ -57,3 +52,10 @@ model_params:
   loss: "binary_crossentropy"
   metrics: ["accuracy"]
   embedding_dim: 200
+
+
+predict_params:
+  model_path: 'gs://text-analysis-323506/train_results/CNN_2021_10_03-12:50:27/checkpoints/CNN_model.03-0.16.hdf5'
+  data_path: 'gs://text-analysis-323506/test_data/test_text_5k.csv.gz'
+  result_path: 'gs://text-analysis-323506/test_results/CNN_test_results.csv'
+  tokenizer_path: 'gs://text-analysis-323506/train_results/CNN_2021_10_03-12:50:27/parser_output/tokenizer.pickle'
